# solace-agent-mesh-plugins

./: CONTRIBUTING.md  PLUGIN_README_TEMPLATE.md  README.md
artifact-host-agent/: README.md
bright-data/: README.md
find-my-ip/: README.md
imagemagick/: README.md
local-mlx-vision/: README.md  pyproject.toml
local-mlx-vision/src/local_mlx_vision/: tools.py
local-tts/: README.md  pyproject.toml
object-detection/: README.md
send-grid/: README.md
tavily/: README.md
video-editor-agent/: README.md
web-agent/: README.md
zapier/: README.md  config.yaml  pyproject.toml
