[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.zapier.metadata]
type = "agent"

[project]
name = "zapier"
version = "0.1.0"
authors = [
  { name="Jamieson Walker", email="jamieson.walker@solace.com" },
]
description = "A SAM agent for interacting with Zapier tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "solace_agent_mesh~=1.0.8",
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/zapier"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/zapier" = "zapier/"
"config.yaml" = "zapier/config.yaml"
"README.md" = "zapier/README.md"
"pyproject.toml" = "zapier/pyproject.toml"
